removed manager reference

--- a/app/views/admin_user_edit/list.html.erb
+++ b/app/views/admin_user_edit/list.html.erb
@@ -117,9 +117,10 @@
                   </ul>
                 </td>
               </tr>
+<!--
               <tr>
                 <td width="30%">
-                  <%= role_checkbox(Roles::MANAGER) %>
+                  <%#= role_checkbox(Roles::MANAGER) %>
                 </td>
                 <td width="70%">
                   <p>The <strong>Manager</strong> role provides additional functionality to the Read Only role including:<br>
@@ -130,6 +131,7 @@
                   </ul>
                 </td>
               </tr>
+-->
               </tbody>
             </table>
         <% end %>
