--- a/app/views/welcome/_job_queue.html.erb
+++ b/app/views/welcome/_job_queue.html.erb
@@ -4,18 +4,18 @@
 <table id="data-table" class="prisme-table table-striped table-hover">
   <thead>
   <tr>
-    <th>Job Name</th>
-    <th width="10%">Status</th>
-    <th colspan="2" width="20%">Job Execution Times</th>
-    <th>Elapsed Time</th>
-    <th>User</th>
-    <th>Last Error</th>
-    <th>Result</th>
+    <th scope="col" >Job Name</th>
+    <th scope="col"  width="10%">Status</th>
+    <th colspan="2" width="20%" scope="col" >Job Execution Times</th>
+    <th scope="col" >Elapsed Time</th>
+    <th scope="col" >User</th>
+    <th scope="col" >Last Error</th>
+    <th scope="col" >Result</th>
   </tr>
   </thead>
   <tbody>
   <tr>
-    <td colspan="8" class="text-center">There are no items to list...</td>
+    <td colspan="8" class="text-center" scope="col">There are no items to list...</td>
   </tr>
   </tbody>
 </table>
