--- a/app/views/welcome/_app_deployment_table.html.erb
+++ b/app/views/welcome/_app_deployment_table.html.erb
@@ -1,7 +1,7 @@
 <div id="<%= deployment[:service_id] %>">
 
   <table class="prisme-table table-striped table-hover">
-    <caption>Service Name:&nbsp;&nbsp;<%= deployment[:service_name] %></caption>
+    <caption title='<%= deployment[:service_desc] %>'>Service Name:&nbsp;&nbsp;<%= deployment[:service_name] %></caption>
     <thead>
     <tr>
       <th scope="col" width="50%">Application</th>
