--- a/app/views/terminology_source_packages/index.html.erb
+++ b/app/views/terminology_source_packages/index.html.erb
@@ -113,7 +113,7 @@
       if (upload_json !== undefined) {
 //        input.attr('required', upload_json['file_required']);//todo use this for input params
 //        input.attr('data-required', true);
-        input.attr('data-reggie', upload_json['expected_naming_pattern']);
+        input.attr('data-regex_msg', upload_json['expected_naming_pattern']);
         input.attr('pattern', upload_json['expected_name_regex']);
 
         var suggested_source_url = upload_json['suggested_source_url'];
@@ -178,7 +178,14 @@
           console.log(value.value + '::' + reggie.toString() + ' regex passes? ' + reggie.test(value.value).toString());
 
           if (!reggie.test(value.value)) {
-            warn_msg += $(this).attr('data-reggie') + "<br><br>";
+            var filename = value.value;
+            if (filename.lastIndexOf('\\') > 0) {
+              filename = filename.substr(filename.lastIndexOf('\\') + 1);
+            } else if (filename.lastIndexOf('\/') > 0) {
+              filename = filename.substr(filename.lastIndexOf('\/') + 1);
+            }
+
+            warn_msg += "<span style=\"font-weight: bold; color: red\">" + filename + "</span> does not match the expected pattern.<br>- " + $(this).attr('data-regex_msg') + "<br><br>";
           }
         });
 
