--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -85,4 +85,6 @@
   </div>
 </nav>
 
-<%= render 'session_timeout/session_timeout_notification' %>
+<% if controller.ssoi? %>
+  <%= render 'session_timeout/session_timeout_notification' %>
+<% end %>
