fixed ssoi session timeout redirection and added check polling call when the user clicks the home button to turn off other polling calls

--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -3,7 +3,7 @@
 <nav class="prisme-navbar" role="navigation">
   <!-- Brand and toggle menu display -->
   <div class="prisme-navbar-header" role="navigation">
-    <a href="<%= root_path %>">
+    <a href="<%= root_path %>" onclick="polling.checkPolling(polling.pollEnum.WELCOME_CONTROLLER);" title="Home">
         <div class="prisme-logo-prisme" aria-label="PRISME Home" title="PRISME Home">
           <span class="glyphicon glyphicon-home" style="padding-right: 10px;"></span>PRISME
         </div>
