508 fixes, details in changelog under * 2016/11/?? - 1.35:

--- a/app/views/welcome/_app_deployment_table.html.erb
+++ b/app/views/welcome/_app_deployment_table.html.erb
@@ -15,7 +15,7 @@
     <tbody>
     <% if deployment[:rows].empty? %>
         <tr>
-          <td colspan="5" style="color: <%= deployment[:available] ? 'green' : 'red' %>">
+          <td colspan="5" style="color: <%= deployment[:available] ? 'green' : '#180606' %>; background: white">
             <%= (deployment[:available] ?
                 'No supported applications are currently deployed to this server' :
                 'Failed to connect to Tomcat server. Either the server is unavailable or is mis-configured.') %>
