--- a/app/views/terminology_source_packages/index.html.erb
+++ b/app/views/terminology_source_packages/index.html.erb
@@ -29,14 +29,14 @@
 <table id="data-table" class="prisme-table table-striped table-hover">
   <thead>
   <tr>
-    <th>User Name</th>
-    <th>Uploaded Files</th>
-    <th>Started At</th>
-    <th>State</th>
-    <th>Result</th>
-    <th width="300px">Progress</th>
-    <th>Job Completed At</th>
-    <th>Elapsed Time</th>
+    <th scope="col">User Name</th>
+    <th scope="col">Uploaded Files</th>
+    <th scope="col">Started At</th>
+    <th scope="col">State</th>
+    <th scope="col">Result</th>
+    <th width="300px" scope="col">Progress</th>
+    <th scope="col">Job Completed At</th>
+    <th scope="col">Elapsed Time</th>
   </tr>
   </thead>
   <tbody>
