--- a/app/views/welcome/_job_queue.html.erb
+++ b/app/views/welcome/_job_queue.html.erb
@@ -1,7 +1,7 @@
 <h4>PRISME Job Queue</h4>
 <%= render 'layouts/filter_table_poll_results', filter_id: 'pjq_filter_rows', filter_label: 'Filter Results', include_all_rows: false, poll: 'reload' %>
 
-<table id="data-table" class="prisme-table table-striped table-hover">
+<table id="table-data" class="prisme-table table-striped table-hover">
   <thead>
   <tr>
     <th scope="col" >Job Name</th>
