fixed job queue table loading bug. The id was changed with 508 changes which broke the table

--- a/app/views/welcome/_job_queue.html.erb
+++ b/app/views/welcome/_job_queue.html.erb
@@ -93,7 +93,7 @@
     }
 
     $.getJSON(gon.routes.welcome_reload_job_queue_list_path, {row_limit: rowlimit}, function (data) {
-      loadTable('data-table', data);
+      loadTable('table-data', data);
     })
   }
 
