--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -23,12 +23,16 @@
   <ul>
     <li><a href='#tp-deployments'>Deployments</a></li>
     <li><a href='#tp-job_queue'>Job Queue</a></li>
+    <li><a href='#tp-log_events'>Log Events</a></li>
   </ul>
   <div id="tp-deployments">
     Loading Tomcat Deployment Information...
   </div>
   <div id="tp-job_queue">
     <%= render partial: 'job_queue' %>
+  </div>
+  <div id="tp-log_events">
+    <%= render partial: 'log_events' %>
   </div>
 </div>
 
