--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -23,7 +23,9 @@
   <ul>
     <li><a href='#tp-deployments'>Deployments</a></li>
     <li><a href='#tp-job_queue'>Job Queue</a></li>
-    <li><a href='#tp-log_events'>Log Events</a></li>
+    <% if policy(:navigation).admin? %>
+      <li><a href='#tp-log_events'>Log Events</a></li>
+    <% end %>
   </ul>
   <div id="tp-deployments">
     Loading Tomcat Deployment Information...
@@ -31,9 +33,11 @@
   <div id="tp-job_queue">
     <%= render partial: 'job_queue' %>
   </div>
-  <div id="tp-log_events">
-    <%= render partial: 'log_events' %>
-  </div>
+  <% if policy(:navigation).admin? %>
+    <div id="tp-log_events">
+        <%= render partial: 'log_events' %>
+      </div>
+  <% end %>
 </div>
 
 <script>
