--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -24,7 +24,7 @@
     <li><a href='#tp-deployments'>Deployments</a></li>
     <li><a href='#tp-job_queue'>Job Queue</a></li>
     <% if policy(:navigation).admin? %>
-      <li><a href='#tp-log_events'>Log Events</a></li>
+      <li><a href='#tp-log_events' class="log-events-link">Log Events</a></li>
     <% end %>
   </ul>
   <div id="tp-deployments">
