--- a/app/views/welcome/_log_events.html.erb
+++ b/app/views/welcome/_log_events.html.erb
@@ -77,125 +77,143 @@
 </div>
 
 <script>
-  function loadLogEventsTable(data) {
-    var fields = ['hostname', 'application_name', 'level', 'tag', 'created_at', 'message', 'acknowledgement'];
-    var tbody = $('#table-log-event-data').find('tbody');
-    tbody.empty();
+    function loadLogEventsTable(data) {
+        var unack_error = false;
+        var fields = ['hostname', 'application_name', 'level', 'tag', 'created_at', 'message', 'acknowledgement'];
+        var tbody = $('#table-log-event-data').find('tbody');
+        tbody.empty();
 
-    $.each(data, function (index, item) {
-      // create the row adding a data-job_id attribute
-      var item_id = item['id'];
-      var row = $('<tr>').addClass('text-top').attr('data-log_event_data', JSON.stringify(item)).attr('data-log_event_id', item_id);
+        $.each(data, function (index, item) {
+            // create the row adding a data-job_id attribute
+            var item_id = item['id'];
+            var row = $('<tr>').addClass('text-top').attr('data-log_event_data', JSON.stringify(item)).attr('data-log_event_id', item_id);
 
-      $.each(fields, function (index, field) {
-        var item_value = item[field + ''];
+            if (unack_error === false) {
+                unack_error = (item['acknowledged_by'] === null && parseInt(item['level']) > gon.log_event_level_constants['ERROR']);
+            }
 
-        if (field === 'level') {
-          var row_level = $('<td>').text(gon.log_event_level_constants[item_value]);
-          row.append(row_level);
-        } else if (field === 'created_at') {
-          var log_create_dt = moment(item['created_at']).format('YYYY-MM-DD [at] HH:mm:ss');
-          row.append($('<td>').html(log_create_dt));
-        } else if (field === 'acknowledgement') {
-          var ack_col1 = '';
-          var ack_col2 = '';
+            $.each(fields, function (index, field) {
+                var item_value = item[field + ''];
 
-          if (item['acknowledged_by'] === null) {
-            row.append($('<td>').attr('colspan', '2').html($('<div>').addClass('btn btn-primary btn-ack').attr('data-btn_ack_id', item_id).text('Acknowledge Event')));
-          } else {
-            row.append($('<td>').css('text-align', 'right').attr('width', "150px").html("Acknowledged By:<br>Acknowledged On:<br>Comment:"));
-            var ack_col = item['acknowledged_by'] + '<br>';
-            ack_col += moment(item['acknowledged_on']).format('YYYY-MM-DD [at] HH:mm:ss') + '<br>';
-            ack_col += item['ack_comment'] + '<br>';
-            row.append($('<td>').html(ack_col));
-          }
+                if (field === 'level') {
+                    var row_level = $('<td>').text(gon.log_event_level_constants_inverted[item_value]);
+                    row.append(row_level);
+                } else if (field === 'created_at') {
+                    var log_create_dt = moment(item['created_at']).format('YYYY-MM-DD [at] HH:mm:ss');
+                    row.append($('<td>').html(log_create_dt));
+                } else if (field === 'acknowledgement') {
+                    var ack_col1 = '';
+                    var ack_col2 = '';
+
+                    if (item['acknowledged_by'] === null) {
+                        row.append($('<td>').attr('colspan', '2').html($('<div>').addClass('btn btn-primary btn-ack').attr('data-btn_ack_id', item_id).text('Acknowledge Event')));
+                    } else {
+                        row.append($('<td>').css('text-align', 'right').attr('width', "150px").html("Acknowledged By:<br>Acknowledged On:<br>Comment:"));
+                        var ack_col = item['acknowledged_by'] + '<br>';
+                        ack_col += moment(item['acknowledged_on']).format('YYYY-MM-DD [at] HH:mm:ss') + '<br>';
+                        ack_col += item['ack_comment'] + '<br>';
+                        row.append($('<td>').html(ack_col));
+                    }
+                }
+                else {
+                    row.append($('<td>').text(item_value));
+                }
+            });
+            tbody.append(row);
+        });
+
+        var tp_log_event = $('.log-events-link');
+        var tp_text = 'Log Events';
+
+        if (unack_error === true) {
+            tp_text += " **";
+            if (!tp_log_event.hasClass('tp_alert_bg')) {
+                tp_log_event.addClass('tp_alert_bg');
+            }
+        } else {
+            tp_log_event.removeClass('tp_alert_bg')
         }
-        else {
-          row.append($('<td>').text(item_value));
-        }
-      });
-      tbody.append(row);
-    });
-  }
 
-  function reload_log_events() {
-    var rowlimit = arguments[0];
-
-    if (rowlimit === undefined) {
-      rowlimit = $('#le_filter_rows').find('option:selected').val();
+        tp_log_event.text(tp_text);
     }
 
-    $.getJSON(gon.routes.welcome_reload_log_events_path, {row_limit: rowlimit}, function (data) {
-      loadLogEventsTable(data);
+    function reload_log_events() {
+        var rowlimit = arguments[0];
 
-      //set up the click events for unacknowledged log events
-      $('div').find('.btn-ack').each(function () {
-        $(this).on('click', function () {
-          var log_event_data = $(this).parent().closest('tr').attr('data-log_event_data');
-          show_ack_modal(log_event_data);
-        });
-      });
-    })
-  }
-
-  function show_ack_modal(data) {
-    var d = JSON.parse(data);
-    $('#modal_hostname').text(d['hostname']);
-    $('#modal_application_name').text(d['application_name']);
-    $('#modal_level').text((gon.log_event_level_constants[d['level']]));
-    $('#modal_tag').text(d['tag']);
-    $('#modal_message').text(d['message']);
-    $('#ack_comment').val('');
-    $('#ack_log_event_id').val(d['id']);
-    $('#ackModal').modal('show');
-  }
-
-  function delete_log_event(user_id, user_name) {
-    bootbox.confirm({
-      size: 'small',
-      title: 'Question?',
-      message: 'Are you sure you want delete <strong>' + user_name + '</strong>?',
-      callback: function (result) {
-        if (result) {
-          $.getJSON(gon.routes.delete_user_path, {user_row_id: user_id}, function (data) {
-            if (data.remove_row === true) {
-              $('table#user_edit_list_table tr#user_row_' + user_id).remove();
-              // if all rows are removed then insert the no_matches row
-              if ($("table#user_edit_list_table > tbody > tr").length === 0) {
-                $("table#user_edit_list_table").find('tbody').html('<%#= no_match_row %>');
-              }
-            }
-            flash_notify(data.flash_options, data.flash_settings);
-          });
+        if (rowlimit === undefined) {
+            rowlimit = $('#le_filter_rows').find('option:selected').val();
         }
-      }
+
+        $.getJSON(gon.routes.welcome_reload_log_events_path, {row_limit: rowlimit}, function (data) {
+            loadLogEventsTable(data);
+
+            //set up the click events for unacknowledged log events
+            $('div').find('.btn-ack').each(function () {
+                $(this).on('click', function () {
+                    var log_event_data = $(this).parent().closest('tr').attr('data-log_event_data');
+                    show_ack_modal(log_event_data);
+                });
+            });
+        })
+    }
+
+    function show_ack_modal(data) {
+        var d = JSON.parse(data);
+        $('#modal_hostname').text(d['hostname']);
+        $('#modal_application_name').text(d['application_name']);
+        $('#modal_level').text((gon.log_event_level_constants[d['level']]));
+        $('#modal_tag').text(d['tag']);
+        $('#modal_message').text(d['message']);
+        $('#ack_comment').val('');
+        $('#ack_log_event_id').val(d['id']);
+        $('#ackModal').modal('show');
+    }
+
+    function delete_log_event(user_id, user_name) {
+        bootbox.confirm({
+            size: 'small',
+            title: 'Question?',
+            message: 'Are you sure you want delete <strong>' + user_name + '</strong>?',
+            callback: function (result) {
+                if (result) {
+                    $.getJSON(gon.routes.delete_user_path, {user_row_id: user_id}, function (data) {
+                        if (data.remove_row === true) {
+                            $('table#user_edit_list_table tr#user_row_' + user_id).remove();
+                            // if all rows are removed then insert the no_matches row
+                            if ($("table#user_edit_list_table > tbody > tr").length === 0) {
+                                $("table#user_edit_list_table").find('tbody').html('<%#= no_match_row %>');
+                            }
+                        }
+                        flash_notify(data.flash_options, data.flash_settings);
+                    });
+                }
+            }
+        });
+    }
+
+    function submit_acknowledgement() {
+        var params = {id: $('#ack_log_event_id').val(), ack_comment: $('#ack_comment').val()};
+        $('#ackModal').modal('hide');
+
+        $.post(gon.routes.acknowledge_log_event_path, params, function (data) {
+            reload_log_events();
+
+            if (data.status === 'success') {
+                flash_notify({message: data.message}, {type: 'success'});
+            } else {
+                flash_notify({message: data.message}, {type: 'alert'});
+            }
+        }, 'json');
+    }
+
+    $(document).ready(function () {
+        reload_log_events();
+
+        $('#ackModal').on('shown.bs.modal', function () {
+            $('#ack_comment').focus()
+        });
+
+        // register for polling
+        polling.registerPolling(polling.pollEnum.WELCOME_LOG_EVENTS, reload_log_events, 30000);
     });
-  }
-
-  function submit_acknowledgement() {
-    var params = {id: $('#ack_log_event_id').val(), ack_comment: $('#ack_comment').val()};
-    $('#ackModal').modal('hide');
-
-    $.post(gon.routes.acknowledge_log_event_path, params, function (data) {
-      reload_log_events();
-
-      if (data.status === 'success') {
-        flash_notify({message: data.message}, {type: 'success'});
-      } else {
-        flash_notify({message: data.message}, {type: 'alert'});
-      }
-    }, 'json');
-  }
-
-  $(document).ready(function () {
-    reload_log_events();
-
-    $('#ackModal').on('shown.bs.modal', function () {
-      $('#ack_comment').focus()
-    });
-
-
-    // register for polling
-    polling.registerPolling(polling.pollEnum.WELCOME_LOG_EVENTS, reload_log_events, 30000);
-  });
 </script>
